Added export of javap module to all unnamed
jdk8 runtime is already (intetnionally)broken
agent can still be attached to jdk8