@@ -68,5 +68,6 @@ readonly PROPERTY_PURPOSE="-Djrd.purpose=$PURPOSE"
 
 # launch application
 "$javac_home"/bin/java -Djdk.attach.allowAttachSelf=true "$PROPERTY_LOCATION" "$PROPERTY_PURPOSE" \
+--add-exports jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED \
 -cp "$TOOLS:$JRD:$RSYNTAXTEXTAREA:$GSON:$BYTEMAN:$CPLC_API:$CPLC_UTIL:$CPLC:$ASM_TREE:$ASM_JAR" \
 org.jrd.backend.data.Main "$@"
